--- a/guia/index.html
+++ b/guia/index.html
@@ -37,6 +37,17 @@
         </div>
     </section>
 
+    
+    <script>if ('serviceWorker' in navigator) {
+    console.log('CLIENT: service worker registration in progress.');
+    navigator.serviceWorker.register('../sw.js').then(function() {
+        console.log('CLIENT: service worker registration complete.');
+    }, function() {
+        console.log('CLIENT: service worker registration failure.');
+    });
+} else {
+    console.log('CLIENT: service worker is not supported.');
+}</script>
     <script src="sw.js"></script>
 </body>
 
